--- a/sentinels/package.json
+++ b/sentinels/package.json
@@ -2,10 +2,10 @@
     "name": "smart-id-api",
     "version": "1.0.0",
     "description": "API server for Smart ID using Express.js",
-    "main": "server.js",
+    "main": "sentinel1.js",
     "scripts": {
-      "start": "node server.js",
-      "dev": "nodemon server.js"
+      "start": "node sentinel1.js",
+      "dev": "nodemon sentinel1.js"
     },
     "keywords": ["express", "api", "swagger", "cors", "dotenv"],
     "author": "Your Name",
